[gd_scene load_steps=13 format=2]

[ext_resource path="res://CancerDetails.gd" type="Script" id=1]
[ext_resource path="res://assets/habitIcons/salad.png" type="Texture" id=2]
[ext_resource path="res://assets/Menus/box.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[node name="CancerDetails" type="Node2D"]
position = Vector2( 184, 95 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 545, 282 )
scale = Vector2( 0.443206, 0.443206 )
texture = ExtResource( 3 )

[node name="CancerType" type="Label" parent="."]
margin_left = 399.0
margin_top = 153.0
margin_right = 640.0
margin_bottom = 191.0
rect_pivot_offset = Vector2( 127, 31 )
theme = SubResource( 2 )
text = "Tipo de câncer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreventionsTitle" type="Label" parent="."]
margin_left = 577.0
margin_top = 230.0
margin_right = 711.0
margin_bottom = 257.0
theme = SubResource( 4 )
text = "Prevenções"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prevention2" type="Sprite" parent="."]
position = Vector2( 649, 278 )
scale = Vector2( 0.0654297, 0.0654297 )
texture = ExtResource( 2 )

[node name="Prevention3" type="Sprite" parent="."]
position = Vector2( 699, 277 )
scale = Vector2( 0.0654297, 0.0654297 )
texture = ExtResource( 2 )

[node name="Prevention1" type="Sprite" parent="."]
position = Vector2( 596, 278 )
scale = Vector2( 0.0654297, 0.0654297 )
texture = ExtResource( 2 )

[node name="RisksTitle" type="Label" parent="."]
margin_left = 403.0
margin_top = 229.0
margin_right = 584.0
margin_bottom = 256.0
theme = SubResource( 6 )
text = "Riscos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Diagnosis" type="Label" parent="."]
margin_left = 405.0
margin_top = 336.0
margin_right = 675.0
margin_bottom = 363.0
theme = SubResource( 6 )
text = "Diagnóstico: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancerBar" type="ProgressBar" parent="."]
margin_left = 405.0
margin_top = 197.0
margin_right = 712.0
margin_bottom = 218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Risk1" type="Label" parent="."]
margin_left = 406.0
margin_top = 255.0
margin_right = 458.0
margin_bottom = 298.0
theme = SubResource( 8 )
text = "risco1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Risk2" type="Label" parent="."]
margin_left = 405.0
margin_top = 272.0
margin_right = 457.0
margin_bottom = 315.0
theme = SubResource( 8 )
text = "risco2
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Risk3" type="Label" parent="."]
margin_left = 405.0
margin_top = 291.0
margin_right = 457.0
margin_bottom = 334.0
theme = SubResource( 8 )
text = "risco3
"
__meta__ = {
"_edit_use_anchors_": false
}
